#2794 Symfony 8.1 Method-Based Commands Implementation